Minor fixes with scroll behind modal

--- a/src/assets/styles/_card.scss
+++ b/src/assets/styles/_card.scss
@@ -1,3 +1,3 @@
 .card {
-  @apply shadow border border-light-5 rounded-3xl p-6 w-full;
+  @apply shadow border border-light-5 rounded-3xl w-full;
 }
