--- a/src/assets/styles/_modal.scss
+++ b/src/assets/styles/_modal.scss
@@ -1,5 +1,5 @@
 dialog {
-  @apply bg-white shadow-lvl-4-left w-full p-8 rounded-2xl;
+  @apply bg-white shadow-2xl w-full p-8 rounded-2xl;
 
   &::backdrop {
     @apply bg-light-140;
@@ -33,12 +33,6 @@ dialog {
     @apply max-w-max m-0;
   }
 
-  animation: fadeIn, slideInFromTop 0.5s, 0.3s ease;
-
-  &.closing {
-    animation: fadeOut, slideOutToTop 0.3s, 0.2s ease;
-  }
-
   &.center {
     @apply m-4;
   }
@@ -50,15 +44,6 @@ dialog {
 
   &.end {
     @apply ms-auto;
-  }
-
-  // Slide in/out animation for end alignment
-  &.end {
-    animation: slideInFromRight 0.3s ease;
-
-    &.closing {
-      animation: slideOutToRight 0.5s ease;
-    }
   }
 }
 
